[gd_scene load_steps=5 format=3 uid="uid://f5df00tq3x2u"]

[ext_resource type="Script" path="res://scripts/LevelSelectionMenu.gd" id="1_ahqkm"]
[ext_resource type="Resource" uid="uid://cfbsynjsw6ejt" path="res://resources/GameStats.tres" id="2_yak52"]
[ext_resource type="Texture2D" uid="uid://bwkjn3p5dcsvh" path="res://art/right_arrow_game_over.png" id="3_60ya5"]
[ext_resource type="Texture2D" uid="uid://3ntlyreascun" path="res://art/home_button_game_over.png" id="4_gibvi"]

[node name="LevelSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahqkm")
game_stats = ExtResource("2_yak52")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.666667, 0.698039, 1)

[node name="LevelGridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -324.0
offset_right = 375.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
columns = 4

[node name="Level1" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " 1 "

[node name="Level2" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " 2 "

[node name="Level3" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " 3 "

[node name="Level4" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " 4 "

[node name="Level5" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " 5 "

[node name="Level6" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " 6 "

[node name="Level7" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " 7 "

[node name="Level8" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " 8 "

[node name="Level9" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = " 9 "

[node name="Level10" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "10"

[node name="Level11" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "11"

[node name="Level12" type="Button" parent="LevelGridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "12"

[node name="NextButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("3_60ya5")

[node name="PrevButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
offset_top = -32.0
offset_right = 64.0
offset_bottom = 32.0
grow_vertical = 2
texture_normal = ExtResource("3_60ya5")
flip_h = true

[node name="HomeButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = -32.0
offset_top = -64.0
offset_right = 32.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_gibvi")

[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
